--- a/index.html
+++ b/index.html
@@ -5,47 +5,65 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Business Casual - Start Bootstrap Theme</title>
+        <title>Resume</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Google fonts-->
         <link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet" />
         <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i" rel="stylesheet" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
+        <link href="stylesbs.css" rel="stylesheet" />
+        <style>
+            @media (min-width: 900px) {
+                .container, .container-xl {
+                    width: 100% !important;
+                    max-width: none !important;
+                    padding-left: 15px !important;
+                    padding-right: 15px !important;
+                }
+            }
+        </style>
     </head>
     <body>
         <header>
             <h1 class="site-heading text-center text-faded d-none d-lg-block">
-                <span class="site-heading-upper text-primary mb-3">A Free Bootstrap Business Theme</span>
-                <span class="site-heading-lower">Business Casual</span>
+                <span class="site-heading-upper text-primary mb-3">Brigham Young University</span>
+                <span class="site-heading-lower">RESUME</span>
             </h1>
         </header>
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
             <div class="container">
-                <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Start Bootstrap</a>
+                <a class="navbar-brand text-uppercase fw-bold d-lg-none" href="index.html">Resume</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="index.html">Home</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Products</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="store.html">Store</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="">Resume</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About Me</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="../products.html">Life</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
         <section class="page-section clearfix">
             <div class="container">
-                <div class="intro">
-                    <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="assets/img/intro.jpg" alt="..." />
-                    <div class="intro-text left-0 text-center bg-faded p-5 rounded">
-                        <h2 class="section-heading mb-4">
-                            <span class="section-heading-upper">Fresh Coffee</span>
-                            <span class="section-heading-lower">Worth Drinking</span>
-                        </h2>
-                        <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!</p>
-                        <div class="intro-button mx-auto"><a class="btn btn-primary btn-xl" href="#!">Visit Us Today!</a></div>
+                <div class="row">
+                    <div class = "col-xl-9 mx-auto">
+                        <div class = "cta-inner bg-faded text-center rounded">
+                            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+                                <h2 class="section-heading mb-4">
+                                    <span class="section-heading-upper">EDUCATION</span>
+                                </h2>
+                                <p class="mb-3">Brigham Young University - Marriott School of Business <br>                                                                                   
+                                    Bachelor of Science in Finance
+                                </p>
+                                    <ul style="text-align: left;">
+                                        <li>GPA 3.93 / 4.00	<br> </li>								                         
+                                        <li>Opportunity Scholarship recipient; full-tuition BYU academic scholarship <br></li> 
+                                        <li>Women in Finance Association and BYU Real Estate Association<br> </li>
+                                        <li>Center Social Impact Association</li>
+                                    </ul>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -53,18 +71,93 @@
         <section class="page-section cta">
             <div class="container">
                 <div class="row">
-                    <div class="col-xl-9 mx-auto">
-                        <div class="cta-inner bg-faded text-center rounded">
-                            <h2 class="section-heading mb-4">
-                                <span class="section-heading-upper">Our Promise</span>
-                                <span class="section-heading-lower">To You</span>
-                            </h2>
-                            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+                    <div class = "col-xl-9 mx-auto">
+                        <div class = "cta-inner bg-faded text-center rounded">
+                            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+                                <h2 class="section-heading mb-4">
+                                    <span class="section-heading-upper">EXPERIENCE</span>
+                                </h2>
+                                <p class="mb-3">North Rock Case Competition <br> March 2024
+                                </p>
+                                    <ul style="text-align: left;">
+                                        <li>Conducted 10+ hours of market research to ascertain the valuation of North Rocks property Cottages at Emerald Cove	<br> </li>								                         
+                                        <li>Collaborated closely with team members to develop a property valuation model for a $71 million real estate investment <br></li> 
+                                        <li>Presented 3 deliverables to the judges, including an investment memo, then explained our findings and answered questions </li>
+                                    </ul>
+                                    <p class="mb-3"> Adapt Construction <br> Jan 2024 - Present
+                                </p>
+                                    <ul style="text-align: left;">
+                                        <li>Organized the collaborative effort of creating a comprehensive process manual designed to optimize operational efficiency	<br> </li>								                         
+                                        <li>Analyzed the workflow of Adapt construction company to find gaps and errors in the employee’s day to day operations <br></li> 
+                                        <li>Sought recourse allocation and conducted employee interviews to gain profound insights into operational endeavors </li>
+                                    </ul>
+                                    <p class="mb-3">Marriott Business Career Center <br> Jan 2024 – Present
+                                    </p>
+                                    <ul style="text-align: left;">
+                                        <li>Facilitated a weekly email to all finance program members, ensuring awareness of 20+ internship and job openings</li>								                         
+                                        <li>Engaged in meetings to gain insights into the proactive strategies employed by the Career Center to enhance placement</li> 
+                                        <li>Connected and collaborated with a student team to publicize finance events across the major through weekly emails</li>
+                                    </ul>
+                                    
+                                    <p class="mb-3">Adam’s Wealth Investment Firm (Family Office) <br>  May 2023 – Aug 2023
+                                    </p>
+                                    <ul style="text-align: left;">
+                                        <li>Communicated with insurance companies to confirm and ensure accuracy across 40+ real and intangible personal assets</li>								                         
+                                        <li>Managed water shares and worked with Utah Division of Water Rights to keep information updated and shares current</li> 
+                                        <li>Assisted the Chief-of-Staff with ad hoc activities such as organizing and managing client assets within the family office</li>
+                                    </ul>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <section class="page-section clearfix">
+            <div class="container">
+                <div class="row">
+                    <div class = "col-xl-9 mx-auto">
+                        <div class = "cta-inner bg-faded text-center rounded">
+                            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+                                <h2 class="section-heading mb-4">
+                                    <span class="section-heading-upper">LEADERSHIP AND SERVICE</span>
+                                </h2>
+                                <p class="mb-3">Cache Valley Ski Team <br> November 2021 - April 2022
+                                </p>
+                                    <ul style="text-align: left;">
+                                        <li>Coached young athletes aged 6-14 years old after competitively skiing from 8-17 years old in Alpine ski racing <br> </li>
+                                        <li>Coordinated with the athletes parents to discuss goals of qualifying for future competitions against neighboring states</li>
+                                    </ul>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="page-section clearfix">
+            <div class="container">
+                <div class="row">
+                    <div class = "col-xl-9 mx-auto">
+                        <div class = "cta-inner bg-faded text-center rounded">
+                            <div class="intro-text left-0 text-center bg-faded p-5 rounded">
+                                <h2 class="section-heading mb-4">
+                                    <span class="section-heading-upper">AWARDS, SKILLS, AND INTERESTS</span>
+                                </h2>
+                                </p>
+                                    <ul style="text-align: left;">
+                                        <li> Trained and competed for a period of 8 years as an alpine ski racer in the US and internationally in Canada and Argentina <br></li>
+                                        <li> Hobbies include hiking, running, skiing, biking, traveling, reading, and playing the piano <br></li>
+                                        <li> Received the Deseret News Academic All-State award for outstanding achievement and performance in piano competition <br></li>
+                                        <li> Visited 8 PE Real Estate firms in Phoenix, AZ on a networking trip to learn from and connect with industry professionals </li>
+
+                                    </ul>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        
         <footer class="footer text-faded text-center py-5">
             <div class="container"><p class="m-0 small">Copyright &copy; Your Website 2023</p></div>
         </footer>
