--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mx-auto">
                         <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="">Resume</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="../about.html">About Me</a></li>
-                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="../products.html">Life</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="about.html">About Me</a></li>
+                        <li class="nav-item px-lg-4"><a class="nav-link text-uppercase" href="products.html">Life</a></li>
                     </ul>
                 </div>
             </div>
